# privateGPT

./: .gitignore  PACKAGING.md  PrivateGPT.spec  README.md  WRITEUP.md  build.py  main.py  pyproject.toml  run.py  verify_build.py
assets/: README.md
data/: documents.db
data/qdrant_db/: meta.json
data/qdrant_db/collection/private_gpt_docs/: storage.sqlite
docs/: OPTIMIZATION_GUIDE.md  PHASE3_GUIDE.md  PHASE4_GUIDE.md  RAG_ARCHITECTURE.md  TESTING.md  VLLM_INTEGRATION.md
hooks/: hook-nvidia.py
installer/: setup.iss
src/private_gpt_app/: __init__.py  main.py  main_broken.py
src/private_gpt_app/backend/: __init__.py  document_store.py  llama_cpp_service.py  llama_service.py  router.py  session_manager.py  transformers_service.py  vllm_service.py
src/private_gpt_app/rag/: __init__.py  chunking.py  embeddings.py  hybrid_search.py  ingestion.py  vector_store.py
src/private_gpt_app/tests/: __init__.py
src/private_gpt_app/ui/: __init__.py  chat_widget.py  file_picker_widget.py  knowledge_base_dialog.py  main_window.py  message_bubble.py  performance_dialog.py  session_sidebar.py  settings_dialog.py  styles.qss  styles_modern.qss
src/private_gpt_app/utils/: __init__.py  crash_recovery.py  gpu_cleanup.py  gpu_monitor.py  logging_config.py  model_downloader.py  paths.py  performance.py  setup_manager.py
